--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -53,7 +53,7 @@
             android:text="Select Image"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:id="@+id/button" app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="161dp"
+            android:id="@+id/butImagePicker" app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="161dp"
             android:layout_marginStart="161dp" app:layout_constraintEnd_toEndOf="parent"
             android:layout_marginEnd="162dp" android:layout_marginRight="162dp" android:layout_marginTop="34dp"
             app:layout_constraintTop_toBottomOf="@+id/textInputLayout3"/>
@@ -65,5 +65,5 @@
             android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
             android:layout_marginRight="8dp" app:layout_constraintHorizontal_bias="0.497"
             android:layout_marginTop="44dp"
-            app:layout_constraintTop_toBottomOf="@+id/button" android:scaleType="fitCenter"/>
+            app:layout_constraintTop_toBottomOf="@+id/butImagePicker" android:scaleType="fitCenter"/>
 </androidx.constraintlayout.widget.ConstraintLayout>
