--- a/app/src/main/res/menu/savedeal.xml
+++ b/app/src/main/res/menu/savedeal.xml
@@ -2,5 +2,6 @@
 <menu xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:android="http://schemas.android.com/apk/res/android">
 
     <item android:title="@string/save_deal" app:showAsAction="always" android:id="@+id/mnu_savedeal"/>
+    <item android:title="@string/mnu_delete" android:id="@+id/mnu_delete"/>
     <item android:title="@string/menu_cancel" android:id="@+id/mnu_cancel" app:showAsAction="never"/>
 </menu>
