--- a/app/src/main/res/layout/deal_activity.xml
+++ b/app/src/main/res/layout/deal_activity.xml
@@ -66,7 +66,7 @@
             android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
             android:layout_marginRight="8dp" app:layout_constraintHorizontal_bias="0.497"
             android:layout_marginTop="44dp"
-            app:layout_constraintTop_toBottomOf="@+id/butImagePicker" android:scaleType="fitCenter"/>
+            app:layout_constraintTop_toBottomOf="@+id/butImagePicker" android:scaleType="centerCrop"/>
     <ProgressBar
             android:visibility="invisible"
             android:indeterminate="true"
